--- a/tekton-app-github/templates/pipline-mega-integration.yml
+++ b/tekton-app-github/templates/pipline-mega-integration.yml
@@ -8,7 +8,6 @@ spec:
       description: The git repo
     - name: helm-source
       description: The ArgoCD git repo
-    - name: maven-settings
   params:
     - name: gitUrl
       description: Git repository url
@@ -16,16 +15,16 @@ spec:
       description: Argo Git repository url
     - name: ArgoGitRevision
       description: Argo Git revision to check out
-      default: master
+      default: main
     - name: gitRevision
       description: Git revision to check out
-      default: master
+      default: main
     - name: sslVerify
       description: Verify ssl from git repo
       default: "false"
     - name: pathToContext
       description: The path to the build context, used by Kaniko - within the workspace
-      default: zip
+      default: .
     - name: srcimageUrl
       description: Source image name including repository
     - name: extraParamImage
@@ -49,25 +48,9 @@ spec:
       description: Username for artifactory destination
         
     # integration
-    - name: integrationPomPath
-      description: The path to integration test pom.xml
-      default: "integrationtest/pom.xml"
-    - name: integrationPomProfile
-      description: The active profile used in pom.xml
-      default: "integrationtest"
-    - name: integrationSSLInsecure
-      description: Disable SSL
-      default: "true"
-    - name: integrationHostScheme
-      description: Use http or https
-      default: http
-    - name: integrationHostPort
-      description: Port
-      default: "9080"
     - name: integrationHostName
       description: URI
-    - name: integrationHostContextRoot
-      description: Service context root
+      default: app
 
   tasks:
     # Clone repo
@@ -120,15 +103,9 @@ spec:
           value:
             - clean
             - install
-            - "-Dmaven.wagon.http.ssl.insecure=true"
-            - "-Dmaven.wagon.http.ssl.allowall=true"
-            - "-Dmaven.wagon.http.ssl.ignore.validity.dates=true"
-            - "-Pteamcity"
       runAfter:
         - clone-repo
       workspaces:
-        - name: maven-settings
-          workspace: maven-settings
         - name: source
           workspace: git-source
 
@@ -179,24 +156,11 @@ spec:
       params:
         - name: GOALS
           value:
-            - clean
-            - verify
-            - "-P$(params.integrationPomProfile)"
-            - "-f$(params.integrationPomPath)"
-            - "-e"
-            - "-U"
-            - "-Dmaven.wagon.http.ssl.insecure=$(params.integrationSSLInsecure)"
-            - "-Dmaven.wagon.http.ssl.allowall=$(params.integrationSSLInsecure)"
-            - "-Dmaven.wagon.http.ssl.ignore.validity.dates=$(params.integrationSSLInsecure)"
-            - "-Dendpoint.host.scheme=$(params.integrationHostScheme)"
+            - failsafe:integration-test
             - "-Dendpoint.host.name=$(params.integrationHostName)"
-            - "-Dendpoint.host.port=$(params.integrationHostPort)"
-            - "-Dendpoint.context.root=$(params.integrationHostContextRoot)"
       runAfter:
         - helm-install
       workspaces:
-        - name: maven-settings
-          workspace: maven-settings
         - name: source
           workspace: git-source 
 
