--- a/tekton-cluster-github/templates/ctask-git-clone.yml
+++ b/tekton-cluster-github/templates/ctask-git-clone.yml
@@ -9,7 +9,7 @@ spec:
   - description: git url to clone
     name: url
     type: string
-  - default: master
+  - default: main
     description: git revision to checkout (branch, tag, sha, ref…)
     name: revision
     type: string
