--- a/app/values.yaml
+++ b/app/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: image-registry.openshift-image-registry.svc:5000/app-ci/app
+  repository: image-registry.openshift-image-registry.svc:5000/app-ci/external-app
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
