--- a/tekton-app/templates/pvc-helm-repo.yml
+++ b/tekton-app/templates/pvc-helm-repo.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Values.pvc.name }}
+  name: {{ .Values.pvc.helmName }}
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: {{ .Values.pvc.size }}
+      storage: {{ .Values.pvc.helmSize }}
